# CrankGE

./: CMakeLists.txt  README.md  log.txt
assets/cup/: wood_cup.mtl
assets/donut/: donut.mtl
assets/sponza/: sponza.mtl
code/shaders/: border.fs  framebuffers_screen.fs  framebuffers_screen.vs  lamp.fs  lamp.vs  model_loading.fs  model_loading.vs  reflectiveCube.fs  reflectiveCube.vs  reflectiveModel.fs  reflectiveModel.vs  skybox.fs  skybox.vs
code/shaders/experimental/: gouraudLighting.fs  gouraudLighting.vs  index_quad.fs  phongLighting.fs  phongLighting.vs  test_import.fs  test_import.vs
code/src/: main.cpp
code/src/Buffers/: FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  RenderBuffer.cpp  RenderBuffer.h  TextureBuffer.cpp  TextureBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
code/src/Graphics/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.h  Shader.cpp  Shader.h
code/src/Misc/: List.h  MAIN.TXT  Vector.h  Vector.inl  core_runtime_functions.cpp  core_runtime_functions.h  globals.cpp  globals.h  vec2.hpp  vertex_data.h
code/src/Utils/: Debug.cpp  Debug.h  FileUtils.cpp  FileUtils.h  Files.cpp  Files.h  GL_DebugUtils.cpp  GL_DebugUtils.h  Log.cpp  Log.h  ObjLoader.cpp  ObjLoader.h  ResourceManager.cpp  ResourceManager.h  Time.cpp  Time.h
code/src/Window/: Window.cpp  Window.h
dependencies/GLEW/lib/: libGLEW.so.2.1.0
dependencies/STB_IMAGE/include/stb/: stb_image.h
